update swagger docs and add query strings to questions index action
